# vtils

./: .gitignore  CMakeLists.txt
include/vtils/: bijective_map.h  bijective_map.inl  cmd_parse.h  cmd_parse.inl  filesystem.h  filesystem.inl  fixed_string.h  hashext.h  ini_parse.h  mat2.h  set_algebra.h  set_algebra.inl  timer.h  timer.inl  two_level_map.h  type_conv.h  utility.h
include/vtils/graphviz/: cxxviz.h  cxxviz.inl
include/vtils/inl/: bijective_map.inl  cmd_parse.inl  ini_parse.inl  set_algebra.inl  type_conv.inl  utility.inl
include/vtils/linprog/: base.h  constraints.inl  expressions.inl  manager.h  manager.inl  operations.inl  variables.inl
include/vtils/linprog/inl/: manager.inl
include/vtils/linprog/inl/base/: operations.inl  variables.inl
src/vtils/: cmd_parse.cpp  filesystem.cpp  ini_parse.cpp  mat2.cpp  timer.cpp
src/vtils/linprog/: base.cpp
